# Recommendation-System-E2E

./: .gitignore  README.md  dockerfile  pyproject.toml  requirements.txt
app/backend/: main.py  recommender.py  requirements.txt
app/frontend/: app.py  requirements.txt
app/models/: movie_features_matrix.joblib
models/: knn_recommender_model.joblib  movie_index_map.pkl
notebooks/: 01_EDA.ipynb  01_EDA_.ipynb  02_preprocessing.ipynb  03_modelling.ipynb
