[project]
name = "recommendation-system"
version = "0.1.0"
description = "End 2 End recommendation system with cloud deploynment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scikit-surprise>=1.1.4",
    "surprise>=0.1",
]
